--- a/src/conponents/Modal/Modal.module.css
+++ b/src/conponents/Modal/Modal.module.css
@@ -12,6 +12,18 @@
 }
 
 .modal {
+  position: relative;
   max-width: calc(100vw - 48px);
   max-height: calc(100vh - 24px);
+}
+
+.btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+
+  border-radius: 2px;
+  border: none;
+
+  cursor: pointer;
 }
