--- a/src/conponents/Searchbar/Searchbar.module.css
+++ b/src/conponents/Searchbar/Searchbar.module.css
@@ -31,7 +31,8 @@
   width: 48px;
   height: 48px;
   border: 0;
-  background-image: url('https://image.flaticon.com/icons/svg/149/149852.svg');
+  background-image: url('https://img.icons8.com/color/48/000000/search--v2.png');
+
   background-size: 40%;
   background-repeat: no-repeat;
   background-position: center;
